fix: reimplement insert marker to address jumpiness

--- a/src/components/layout-panel/styles/axis.module.css
+++ b/src/components/layout-panel/styles/axis.module.css
@@ -40,7 +40,6 @@
     flex: 1;
     inline-size: 1px;
     /* Same as chip: 20px content + 1px border top/bottom + 2px margin top/bottom */
-    block-size: 20px;
-    margin: 2px;
+    block-size: 26px;
     position: relative;
 }
