--- a/src/components/layout-panel/styles/insert-marker.module.css
+++ b/src/components/layout-panel/styles/insert-marker.module.css
@@ -1,38 +1,32 @@
 /* Insert marker styles */
-.withInsertMarker::before,
-.withInsertMarker::after {
-    content: '';
+
+/* Marker line (the main element) */
+.marker {
+    box-sizing: border-box;
     position: absolute;
     z-index: 1;
-}
-
-/* the vertical line */
-.withInsertMarker::before {
-    inset-block: 6px -4px;
+    inset-block: 7px 2px;
     inline-size: 4px;
     background-color: #4c9ffe;
 }
 
-/* the circle */
-.withInsertMarker::after {
-    inset-block-start: -4px;
-    inline-size: 12px;
-    block-size: 12px;
-    border: 4px solid #4c9ffe;
+/* Marker circle (pseudo-element at top of line) */
+.marker::before {
+    content: '';
+    position: absolute;
+    inset-block-start: -8px;
+    inset-inline-start: -3px;
+    inline-size: 10px;
+    block-size: 10px;
+    border: 3px solid #4c9ffe;
     background: transparent;
     border-radius: 12px;
 }
 
-.withInsertMarker:not(.atEnd)::before {
-    inset-inline-start: -5px;
-}
-.withInsertMarker:not(.atEnd)::after {
-    inset-inline-start: -9px;
+.marker:not(.atEnd) {
+    inset-inline-start: -2px;
 }
 
-.withInsertMarker.atEnd::before {
-    inset-inline-end: -5px;
-}
-.withInsertMarker.atEnd::after {
-    inset-inline-end: -9px;
+.marker.atEnd {
+    inset-inline-end: -2px;
 }
